--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.0.0",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
+    "react-day-picker": "^7.3.0",
     "react-redux": "^7.1.0",
+    "react-select": "^3.0.4",
     "redux": "^4.0.4"
   },
   "husky": {
